--- a/src/MorpheusPoc/Web.config
+++ b/src/MorpheusPoc/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MeshTarget" value="http://host.docker.internal:3000/health" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
